# discord-ai-ticket-bot

./: .env.example  LICENSE  README.md  database.py  main.py  pyproject.toml  settings.py
commands/: development.py  setup.py  spawn.py
components/: open_ticket.py
embeds/: close_ticket.py  open_ticket.py  responses.py
handlers/: agent.py  agent_handler.py  chat_history_handler.py  debounce_handler.py  knowledge.py  knowledge_handler.py  llm.py  message_ingest_handler.py  ticket.py  ticket_chat_history_handler.py  ticket_handler.py
utils/: ticketable_guild.py
views/: close_ticket_view.py  open_ticket.py  open_ticket_view.py
