[project]
name = "discord-ai-ticket-bot"
version = "0.1.0"
description = "A ticket bot for Discord that uses AI to answer on your behalf"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-cord>=2.6.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.0.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "ruff>=0.14.7",
]
